fix: adjust sidebar and searchbar layout on mobile, set art width on large monitors

--- a/public/styles/queries.css
+++ b/public/styles/queries.css
@@ -42,8 +42,17 @@
     background-color: var(--main-green-transparent);
   }
 
+  .sidebar {
+    grid-area: 1 / 2 / 2 / 2;
+    margin: 0rem 1rem 1rem 1rem;
+  }
+
+  .search-bar {
+    grid-area: 2 / 1 / 3 / 3;
+  }
+
   .main-content {
-    grid-template-columns: 1fr;
+    grid-template-columns: 50% 50%;
     padding: 1rem;
     background-size: 250px auto;
   }
@@ -212,5 +221,11 @@
 
   .note-form {
     grid-area: 5 / 2 / 6 / 3;
+  }
+}
+
+@media (min-width: 1601px) {
+  .main-content {
+    background-size: auto 400px;
   }
 }
